[project]
name = "agent-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.4",
    "google>=3.0.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-aiplatform[adk,agent-engines]>=1.71.1",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
    "slack-bolt>=1.25.0",
    "streamlit>=1.50.0",
]
